--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,14 @@
         <artifactId>selenium-java</artifactId>
         <version>3.141.59</version>
     </dependency>
+    <dependency>
+        <groupId>org.robotframework</groupId>
+        <artifactId>robotframework-maven-plugin</artifactId>
+        <version>1.6.0</version>
+        <type>maven-plugin</type>
+    </dependency>
+
+
 </dependencies>
 
 </project>
