--- a/pom.xml
+++ b/pom.xml
@@ -24,32 +24,39 @@
 <dependencies>
     <dependency>
         <groupId>org.testng</groupId>
-        <artifactId>testng</artifactId>
+            <artifactId>testng</artifactId>
         <version>7.1.0</version>
         <scope>test</scope>
     </dependency>
     <dependency>
         <groupId>org.seleniumhq.selenium</groupId>
-        <artifactId>selenium-java</artifactId>
+           <artifactId>selenium-java</artifactId>
         <version>3.141.59</version>
     </dependency>
     <dependency>
         <groupId>org.robotframework</groupId>
-        <artifactId>robotframework-maven-plugin</artifactId>
+           <artifactId>robotframework-maven-plugin</artifactId>
         <version>1.6.0</version>
         <type>maven-plugin</type>
     </dependency>
     <dependency>
         <groupId>com.codeborne</groupId>
-        <artifactId>selenide</artifactId>
+           <artifactId>selenide</artifactId>
         <version>5.11.0</version>
     </dependency>
     <dependency>
         <groupId>org.slf4j</groupId>
-        <artifactId>slf4j-simple</artifactId>
+           <artifactId>slf4j-simple</artifactId>
         <version>1.7.30</version>
         <scope>test</scope>
     </dependency>
+    <dependency>
+        <groupId>io.rest-assured</groupId>
+           <artifactId>rest-assured</artifactId>
+        <version>4.3.0</version>
+        <scope>test</scope>
+    </dependency>
+
 
 
 
